# ModernGraphicsGuide

./: .gitmodules  404.html  index.html  mkdocs.yml
.github/workflows/: mkdocs_site.yml
.site/: 404.html  index.html
.site/00-C++/5.宏、模板、反射/: index.html
.site/00-C++/6.内存管理、跨平台/: index.html
.site/02-Graphics/0.WindowAndWidget/: index.html
.site/assets/stylesheets/: main.f56500e0.min.css
.site/search/: search_index.json
00-C++/: 0.开端.md  0.开篇.md  1.现代开发工作流.md  1.计算机发展史.md  2.C++.md  3.宏、模板、反射.md  4.内存管理&跨平台.md  4.库.md
00-C++/1.计算机发展史/: index.html
00-C++/2.C++学习路线/: index.html
00-C++/3.现代开发工作流/: index.html
00-C++/4.库/: index.html
00-C++/5.宏、模板、反射/: index.html
00-C++/6.内存管理、跨平台/: index.html
01-GUI/0.窗口基础/: index.html
01-GUI/1.Qt/: index.html
01-GUI/2.ImGUI/: index.html
01-Qt/: 1.窗口基础.md
02-Graphics/: CMakeLists.txt
02-Graphics/0-Common/Core/: CMakeLists.txt
02-Graphics/0-Common/Core/DetailCustomization/: QInstacneDetail_QRhiUniformBlock.cpp  QInstacneDetail_QRhiUniformBlock.h
02-Graphics/0-Common/Core/RHI/: QRhiDefine.h  QRhiEx.cpp  QRhiEx.h  QRhiToolkit.cpp  QRhiToolkit.h  QRhiUniform.cpp  QRhiUniform.h  QRhiWidget.h  QRhiWindow.cpp  QRhiWindow.h
02-Graphics/0-Common/Core/Render/: IPainter.h  IRenderComponent.h  IRenderItem.h  IRenderPass.h  IRenderer.cpp  IRenderer.h  QFrameGraph.cpp  QFrameGraph.h  QMaterial.h  QRendererWidget.cpp  QRendererWidget.h  QRhiGraphicsPipelineBuilder.cpp  QRhiGraphicsPipelineBuilder.h  QRhiGraphicsPipelineEx.cpp  QRhiGraphicsPipelineEx.h
02-Graphics/0-Common/Core/Render/Painter/: TexturePainter.cpp
02-Graphics/0-Common/Core/Render/RenderComponent/: ISceneRenderComponent.cpp  ISceneRenderComponent.h  QSkyboxRenderComponent.cpp  QSkyboxRenderComponent.h  QStaticMeshRenderComponent.cpp  QStaticMeshRenderComponent.h
02-Graphics/0-Common/Core/Render/RenderPass/: QDefaultSceneRenderPass.cpp  QDefaultSceneRenderPass.h
02-Graphics/0-Common/Core/Render/Renderer/: QWindowRenderer.cpp  QWindowRenderer.h
02-Graphics/0-Common/Core/Utils/: QCamera.cpp  QCamera.h
02-Graphics/0-Core/: CMakeLists.txt
02-Graphics/0-Core/Src/Asset/: AssetUtils.h  QParticleSystem.cpp  QParticleSystem.h  QSkeletalMesh.cpp  QSkeletalMesh.h
02-Graphics/0-Core/Src/DetailCustomization/: QDPI_Color4D.cpp  QDPI_Color4D.h  QDPI_QMatrix4x4.cpp  QDPI_QMatrix4x4.h  QInstacneDetail_QRhiUniformBlock.cpp  RegisterEntry.h
02-Graphics/0-Core/Src/DetailCustomization/Widget/: QColor4DButton.hpp
02-Graphics/0-Core/Src/RHI/: QRhiEx.cpp  QRhiEx.h  QRhiUniformBlock.cpp  QRhiUniformBlock.h  QRhiWindow.cpp
02-Graphics/0-Core/Src/Render/: IRenderComponent.h  IRenderPass.cpp  IRenderPass.h  IRenderer.cpp  IRenderer.h  QFrameGraph.cpp  QRendererWidget.cpp  QRhiGraphicsPipelineBuilder.cpp  QRhiGraphicsPipelineBuilder.h
02-Graphics/0-Core/Src/Render/Painter/: ImGuiPainter.cpp
02-Graphics/0-Core/Src/Render/RenderComponent/: ISceneRenderComponent.cpp  ISceneRenderComponent.h  QParticlesRenderComponent.cpp  QParticlesRenderComponent.h  QSkeletalMeshRenderComponent.cpp  QSkeletalMeshRenderComponent.h  QSkyboxRenderComponent.cpp  QStaticMeshRenderComponent.cpp  QStaticMeshRenderComponent.h
02-Graphics/0-Core/Src/Render/RenderPass/: QBloomMerageRenderPass.cpp  QBloomMerageRenderPass.h  QBlurRenderPass.cpp  QBlurRenderPass.h  QDefaultSceneRenderPass.cpp  QDefaultSceneRenderPass.h  QFloatTextureSceneRenderPass.cpp  QFloatTextureSceneRenderPass.h  QPixelFilterRenderPass.cpp  QPixelFilterRenderPass.h  QSceneOutputRenderPass.cpp  QSceneOutputRenderPass.h  QTextureOutputRenderPass.cpp  QTextureOutputRenderPass.h
02-Graphics/0-Core/Src/Render/Renderer/: QWindowRenderer.cpp  QWindowRenderer.h
02-Graphics/0-Core/Src/Utils/: QCamera.cpp  QCamera.h
02-Graphics/0.WindowAndWidget/: index.html
02-Graphics/1-Basis/01-WindowAndWidget/Source/: main.cpp
02-Graphics/1-Basis/02-GraphicRenderingPipeline/Source/: MyFirstTriangleWindow.h  TriangleWindow.h  main.cpp
02-Graphics/1-Basis/03-Shader/Source/: main.cpp
02-Graphics/1-Basis/04-Buffer/Source/: main.cpp
02-Graphics/1-Basis/05-Texture/Source/: TextureWindow.h  main.cpp
02-Graphics/1-Basis/06-Blend/Source/: BlendWindow.h  main.cpp
02-Graphics/1-Basis/07-Test/Source/: DepthStencilTestWindow.h  main.cpp
02-Graphics/1-Basis/08-Instancing/Source/: InstancingWindow.h  main.cpp
02-Graphics/1-Basis/09-MultiRenderTarget/Source/: MRTWindow.h  main.cpp
02-Graphics/1-Basis/10-Offscreen/Source/: main.cpp
02-Graphics/1-Basis/11-ComputeShader/Source/: ComputeShaderWindow.h  main.cpp
02-Graphics/1-Basis/12-IndirectDraw/Source/: main.cpp
02-Graphics/2-Advance/00-Camera/Source/: TriangleWindow.h
02-Graphics/2-Advance/00-RenderingArchitecture/Source/: main.cpp
02-Graphics/2-Advance/01-Editor/Source/: main.cpp
02-Graphics/2-Advance/02-Scene/Source/: main.cpp
02-Graphics/2-Advance/03-Material/Source/: main.cpp
02-Graphics/2-Advance/03-StaticMesh/Source/: main.cpp
02-Graphics/2-Advance/04-SkeletonMesh/Source/: main.cpp
02-Graphics/2-Advance/04-Skybox/Source/: main.cpp
02-Graphics/2-Advance/05-GPUParticles/Source/: main.cpp
02-Graphics/2-Advance/06-PostEffect/Source/: main.cpp
02-Graphics/2-Advance/08-ImGUI/Source/: main.cpp
02-Graphics/2-Advance/09-MousePicking/Source/: ExampleRhiWidget.h
Docs/: README.md
Docs/00-C++/: 1.计算机发展史.md  2.C++基础路线.md  2.C++学习路线.md  3.现代开发工作流.md  5.宏、模板、反射.md
Source/: CMakeLists.txt
Source/0-Core/Src/DetailCustomization/: QInstacneDetail_QRhiUniformBlock.h  RegisterEntry.h
Source/0-Core/Src/Render/: IRenderPass.h  QRendererWidget.h
WebSite/00-C++/1.计算机发展史/: index.html
WebSite/00-C++/2.C++学习路线/: index.html
WebSite/00-C++/3.现代开发工作流/: index.html
WebSite/00-C++/4.库/: index.html
WebSite/01-GUI/0.窗口基础/: index.html
WebSite/01-GUI/1.Qt/: index.html
WebSite/01-GUI/2.ImGUI/: index.html
WebSite/Stylesheet/: mkdocs_extra.css
WebSite/assets/stylesheets/: palette.2505c338.min.css
search/: search_index.json
(+14 files in other folders)
